# API_test_emprendimientos

./: .gitignore  README.md  aoo-store.sql  appstore-registros.sql  appstore.sql  databasesstore.sql  logicaexcel.xlsx  pyproject.toml  requirements.txt  storeconsultas.sql  ultima.sql
backend/app/: main.py
backend/app/api/models/: __init__.py  cliente.py  pedido.py  persona.py
backend/app/api/routes/: __init__.py  cliente.py  pedido.py  persona.py
backend/app/database/: crud.py  models.py
backend/app/schemas/: __init__.py  cliente.py  pedido.py  persona.py
modelodatosmypes/: modelodatosmypes.sql
modelodatosnegocios/: Kp's.sql  modelodatosnegocio.sql  modeloregistros.sql
server/: database.py  main.py  models.py
