[tool.poetry]
name = "database-test-mariadb"
version = "0.1.0"
description = "paquetesv1.0.01"
authors = ["clblommberg <clblommberg@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "database_test_mariadb"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
sqlalchemy = "^2.0.19"
uvicorn = "^0.23.2"
mysql-connector-python = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
